--- a/utility/email/template.html
+++ b/utility/email/template.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>测试报告</title>
+    <title>test_report</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -54,10 +54,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>测试报告</h1>
+        <h1>{{ email_header }}_test_report</h1>
+        <div class="summary">
+            <p><strong>Total Cases:</strong> {{ total }}</p>
+            <p><strong>Pass:</strong> {{ pass_count }}</p>
+            <p><strong>Fail:</strong> {{ fail_count }}</p>
+            <p><strong>Crash:</strong> {{ crash_count }}</p>
+        </div>
         <table>
             <thead>
                 <tr>
+                    <th>Numbers</th>
                     <th>Case Name</th>
                     <th>Test Result</th>
                     <th>Test Loop</th>
@@ -83,12 +90,7 @@
                 {% endfor %}
             </tbody>
         </table>
-        <div class="summary">
-            <p><strong>Total Cases:</strong> {{ total }}</p>
-            <p><strong>Pass:</strong> {{ pass_count }}</p>
-            <p><strong>Fail:</strong> {{ fail_count }}</p>
-            <p><strong>Crash:</strong> {{ crash_count }}</p>
-        </div>
+
     </div>
 </body>
 </html>
